# aplicaciones-opengl-graficacion

./: CMakeLists.txt  README.md  datos.csv
data_set/: school_year.csv
src/: practica_3.py  practica_pelotas.cpp  practica_rompecabezas.cpp
src/core/: COLORES.h  Colores.h  Estructuras.h  Librerias.h
src/practica_1/: Aplicacion.cpp  App.cpp  App.h  README.md  main.cpp
src/practica_2/: README.md  practica_2.py
src/practica_3/: README.md  practica_3.py
src/practica_4/: base.h  practica_4.cpp
src/practica_5/: README.md  app.cpp  base.h  practica_5.cpp
src/practica_extra1/: practica_extra1.py
src/practica_extra2/: practica3.cpp
src/practica_extra3/: practica_4.py
src/practica_extra5/: build.h  getbmp.cpp  getbmp.h  practica_5.cpp
src/practica_extra6/: practica6.cpp
src/practica_recuperacion/: algoritmo_a.py  log.txt  practica_recuperacion.py  texturas_ejemplo.py
src/practica_recuperacion/cplusplus/: App.cpp  Piece.cpp  Piece.h  Point.cpp  Point.h  Utils.h  practica_recuperacion.cpp
src/proyecto_1/: Librerias.h  Pieza.cpp  Pieza.h  base.h  juego_1.cpp  utils.h
src/proyecto_2/: game.h  game.py  matrix.h  proyecto_2.cpp  proyecto_2.py
